# uni_python_project_hw

./: README.md  pyproject.toml  requirements.txt
rmproject/: get_dataframe_from_zip_file.py  get_hottest_city_by_year.py
tests/rmproject/: test_get_hottest_city_by_year.py
